--- a/packages/core/i18n/nls.zh-cn.json
+++ b/packages/core/i18n/nls.zh-cn.json
@@ -1,5 +1,6 @@
 {
-  "disassemblyView": "反汇编视图",
+  "terminal:new:profile": "从配置文件中创建新的集成终端",
+  "terminal:profile:default": "选择默认的终端配置文件",
   "theia": {
     "callhierarchy": {
       "noCallers": "没有发现调用者。",
@@ -8,9 +9,9 @@
     "core": {
       "about": {
         "compatibility": "{0} 兼容性",
-        "defaultApi": "默认的{0} API"
+        "defaultApi": "默认的{0} API",
+        "version": "版本"
       },
-      "availableLanguages": "可用的语言",
       "common": {
         "closeAll": "全部关闭",
         "closeAllTabMain": "关闭主区域的所有标签页",
@@ -32,7 +33,6 @@
         "browse": "浏览"
       },
       "highlightModifiedTabs": "控制是否在修改过的(dirty)编辑器标签上绘制顶部边框。",
-      "installedLanguages": "已安装的语言",
       "keybindingStatus": "{0}被按下,等待更多的按键",
       "keyboard": {
         "choose": "选择键盘布局",
@@ -43,11 +43,8 @@
         "pc": "电脑键盘",
         "tryDetect": "尝试从浏览器信息和按下的按键中检测键盘布局。"
       },
-      "mouseBackForwardToNavigate": "启用鼠标按键四和五来执行 \"往回走 \"和 \"往前走 \"命令。",
       "offline": "离线",
-      "proxySupportFallback": "启用对扩展的代理支持,当没有找到代理时,退回到请求选项。",
       "quitMessage": "任何未保存的修改都不会被保存。",
-      "quitTitle": "你确定你要退出吗?",
       "resetWorkbenchLayout": "重置工作台面布局",
       "searchbox": {
         "close": "关闭 (Escape)",
@@ -62,99 +59,30 @@
       "compound-cycle": "启动配置'{0}'包含一个与自己的循环",
       "continueAll": "继续所有",
       "copyExpressionValue": "复制表达式的值",
-      "debugSessionActive": "有一个活跃的调试会话,你确定你要停止它吗?",
-      "debugSessionActiveMultiple": "有活跃的调试会话,你确定你要停止它们吗?",
-      "disassembly-view": {
-        "disassembly": "拆卸",
-        "show-source-code": "在反汇编视图中显示源代码。"
-      },
+      "debugVariableInput": "设置{0} 值",
       "instruction-breakpoint": "指令断点",
-      "instructionAddress": "地址",
-      "instructionBytes": "字节数",
-      "instructionNotAvailable": "无反汇编代码。",
-      "instructionText": "指令",
       "missingConfiguration": "动态配置'{0}:{1}'缺少或不适用",
-      "open-disassembly-view": "打开反汇编视图",
       "pauseAll": "暂停所有",
       "reveal": "显示",
       "threads": "线程",
       "toggleTracing": "启用/禁用与调试适配器的跟踪通信"
     },
-    "disassembly-view": {
-      "disassemblyTableColumnLabel": "说明"
-    },
     "editor": {
       "diffEditor.diffAlgorithm.experimental": "使用一种实验性的扩散算法。",
       "diffEditor.diffAlgorithm.smart": "使用默认的差分算法。",
-      "diffEditor.maxFileSize": "要为其计算差异的最大文件大小(MB)。使用 0 表示无限制。",
       "diffEditor.renderMarginRevertIcon": "启用后,差异编辑器在其字形边框中显示箭头,以恢复修改。",
-      "editor.accessibilityPageSize": "控制编辑器中可由屏幕阅读器一次读出的行数。当检测到屏幕阅读器时，会自动将默认值设置为 500。警告: 如果行数大于默认值，可能会影响性能。",
-      "editor.bracketPairColorization.enabled": "控制是否已启用括号对着色。使用 `#workbench.colorCustomizations#` 替代括号高亮颜色。",
-      "editor.bracketPairColorization.independentColorPoolPerBracketType": "控制每个托架类型是否有自己独立的颜色池。",
+      "dirtyEncoding": "该文件是脏的。请先保存它,然后用另一种编码重新打开它。",
       "editor.codeActionWidget.showHeaders": "启用/禁用在代码动作菜单中显示组标题。",
-      "editor.codeLensFontSize": "控制 CodeLens 的字号(以像素为单位)。设置为 `0` 时，将使用 90% 的 `#editor.fontSize#`。",
-      "editor.dropIntoEditor.enabled": "控制你是否可以通过按住`shift`将文件拖入文本编辑器(而不是在编辑器中打开文件)。",
-      "editor.experimental.pasteActions.enabled": "启用/禁用在粘贴时从扩展程序中运行编辑。",
-      "editor.find.seedSearchStringFromSelection0": "切勿为编辑器选择中的搜索字符串设定种子。",
-      "editor.find.seedSearchStringFromSelection1": "始终为编辑器选择中的搜索字符串设定种子，包括光标位置的字词。",
-      "editor.find.seedSearchStringFromSelection2": "仅为编辑器选择中的搜索字符串设定种子。",
-      "editor.foldingImportsByDefault": "控制编辑器是否自动折叠导入范围。",
-      "editor.foldingMaximumRegions": "可折叠区域的最大数量。如果当前源具有大量可折叠区域，那么增加此值可能会导致编辑器的响应速度变慢。",
       "editor.formatOnSaveMode.modificationsIfAvailable": "将尝试只对修改部分进行格式化(需要源代码控制)。如果不能使用源码控制,那么整个文件将被格式化。",
-      "editor.guides.bracketPairs": "控制是否启用托架对指南。",
-      "editor.guides.bracketPairs0": "启用支架配对指南。",
-      "editor.guides.bracketPairs1": "只对活动支架对启用支架对导向。",
-      "editor.guides.bracketPairs2": "禁用托架对指南。",
-      "editor.guides.bracketPairsHorizontal": "控制是否启用水平托架对导向。",
-      "editor.guides.bracketPairsHorizontal0": "启用水平导引,作为垂直托架对导引的补充。",
-      "editor.guides.bracketPairsHorizontal1": "只对活动支架对启用水平导向。",
-      "editor.guides.bracketPairsHorizontal2": "禁用水平托架对导板。",
-      "editor.guides.highlightActiveBracketPair": "控制编辑器是否应突出显示活动的括号对。",
-      "editor.guides.highlightActiveIndentation0": "突出活动缩进指南。",
-      "editor.guides.highlightActiveIndentation1": "突出显示活动的缩进指南,即使括号内的指南被突出显示。",
-      "editor.guides.highlightActiveIndentation2": "不要突出显示活动缩进指南。",
-      "editor.hover.above": "如果有空间的话,更倾向于显示悬停在该线之上。",
-      "editor.inlayHints.enabled": "启用编辑器中的内联提示。",
-      "editor.inlayHints.enabled0": "镶嵌提示已启用",
       "editor.inlayHints.enabled1": "镶嵌提示默认显示,按住 \"Ctrl+Alt \"时隐藏。",
       "editor.inlayHints.enabled2": "镶嵌提示默认是隐藏的,当按住`Ctrl+Alt`时显示。",
-      "editor.inlayHints.enabled3": "镶嵌提示被禁用",
-      "editor.inlayHints.fontFamily": "控制编辑器中内联提示的字体家族。当设置为空时,使用`#editor.fontFamily#`。",
-      "editor.inlayHints.fontSize": "控制编辑器中内联提示的字体大小。当配置值小于`5'或大于编辑器的字体大小时,默认使用`#editor.fontSize#`的90%。",
-      "editor.inlayHints.padding": "启用编辑器中嵌套提示周围的填充。",
-      "editor.inlineSuggest.enabled": "控制是否在编辑器中自动显示内联建议。",
-      "editor.language.colorizedBracketPairs": "如果启用了括号对着色,则定义括号对按其嵌套级别进行着色。",
-      "editor.lineHeight": "控制行高。\n - 使用0可以根据字体大小自动计算行高。\n - 0到8之间的值将被用作字体大小的乘数。\n - 大于或等于8的值将作为有效值使用。",
       "editor.minimap.autohide": "控制是否自动隐藏小地图。",
       "editor.multiCursorModifier": "用于用鼠标添加多个光标的修改器。转到定义和打开链接的鼠标手势将进行调整,使其不与[多光标修改器](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier)冲突。",
       "editor.quickSuggestions": "控制在输入时是否应该自动显示建议。这可以在输入评论、字符串和其他代码时加以控制。快速建议可以被配置为显示为幽灵文本或建议小部件。还要注意'#editor.suggestOnTriggerCharacters#'设置,它控制建议是否被特殊字符触发。",
-      "editor.quickSuggestions0": "快速建议显示在建议小部件内",
-      "editor.quickSuggestions1": "快速建议显示为幽灵文本",
-      "editor.quickSuggestions2": "快速建议被禁用",
-      "editor.scrollbar.horizontal": "控制水平滚动条的可见性。",
-      "editor.scrollbar.horizontal0": "水平滚动条只有在必要时才会显现。",
-      "editor.scrollbar.horizontal1": "水平滚动条将始终可见。",
-      "editor.scrollbar.horizontal2": "水平滚动条将始终被隐藏。",
-      "editor.scrollbar.horizontalScrollbarSize": "水平滚动条的高度。",
-      "editor.scrollbar.scrollByPage": "控制点击是按页滚动还是跳到点击位置。",
-      "editor.scrollbar.vertical": "控制垂直滚动条的可见性。",
-      "editor.scrollbar.vertical0": "垂直滚动条只有在必要时才会显现。",
-      "editor.scrollbar.vertical1": "垂直滚动条将始终可见。",
-      "editor.scrollbar.vertical2": "垂直滚动条将始终被隐藏。",
-      "editor.scrollbar.verticalScrollbarSize": "垂直滚动条的宽度。",
       "editor.showFoldingControls1": "千万不要显示折叠式控制,减少水沟的大小。",
       "editor.stickyScroll.enabled": "在编辑器顶部的滚动中显示嵌套的当前作用域。",
       "editor.stickyScroll.maxLineCount": "定义要显示的最大粘性线数。",
       "editor.suggest.matchOnWordStartOnly": "当启用IntelliSense过滤功能时,需要在一个词的开头匹配第一个字符,例如在 \"Console \"或 \"WebContext \"上的 \"c\",但在 \"description \"上_不需要。当禁用IntelliSense时,将显示更多的结果,但仍然按照匹配质量进行排序。",
-      "editor.suggest.preview": "控制是否在编辑器中预览建议结果。",
-      "editor.suggest.showDeprecated": "当启用IntelliSense时,会显示 \"删除 \"的建议。",
-      "editor.unicodeHighlight.allowedCharacters": "定义了不被高亮显示的允许的字符。",
-      "editor.unicodeHighlight.allowedLocales": "在允许的地区中常见的Unicode字符没有被突出显示。",
-      "editor.unicodeHighlight.ambiguousCharacters": "控制是否突出显示可能与基本ASCII字符混淆的字符,除了那些在当前用户地域中常见的字符。",
-      "editor.unicodeHighlight.includeComments": "控制注释中的字符是否也应受到unicode高亮的影响。",
-      "editor.unicodeHighlight.includeStrings": "控制字符串中的字符是否也应受制于unicode高亮显示。",
-      "editor.unicodeHighlight.invisibleCharacters": "控制仅保留空间或完全没有宽度的字符是否被突出显示。",
-      "editor.unicodeHighlight.nonBasicASCII": "控制是否突出显示所有非基本ASCII字符。只有U+0020和U+007E之间的字符、制表符、换行符和回车符被视为基本ASCII。",
       "files.autoSave": "控制有未保存的修改的编辑器的[自动保存](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save)。",
       "files.autoSave.afterDelay": "在配置的 `#files.autoSaveDelay#`之后,有改动的编辑器会自动保存。",
       "files.autoSave.off": "有变化的编辑器永远不会被自动保存。",
@@ -162,12 +90,9 @@
       "files.autoSave.onWindowChange": "当窗口失去焦点时,有变化的编辑器会自动保存。",
       "formatOnSaveTimeout": "超时,以毫秒为单位,超时后文件保存时运行的格式化被取消。",
       "persistClosedEditors": "控制是否为工作区持续保存关闭的编辑器历史,跨越窗口重新加载。",
-      "readOnly": "只读",
       "showAllEditors": "显示所有打开的编辑器",
       "splitHorizontal": "水平拆分编辑器",
       "splitVertical": "垂直拆分编辑器",
-      "status-bar-pin": "添加到状态栏",
-      "status-bar-unpin": "从状态栏中删除",
       "toggleStickyScroll": "切换粘滞滚动"
     },
     "file-search": {
@@ -198,7 +123,10 @@
       "format": "格式:",
       "maxConcurrentUploads": "上传多个文件时的最大并发文件数。0意味着所有文件都将被并发上传。",
       "maxFileSizeMB": "控制可能打开的最大文件大小(MB)。",
+      "prepareDownload": "准备下载...",
+      "prepareDownloadLink": "准备下载链接...",
       "processedOutOf": "在{1}中处理了{0}。",
+      "replaceTitle": "替换文件",
       "uploadFiles": "上传文件...",
       "uploadedOutOf": "上传了{0}出{1}。"
     },
@@ -254,7 +182,6 @@
       "tabbarDecorationsEnabled": "在标签栏中显示问题装饰器(诊断标记)。"
     },
     "memory-inspector": {
-      "address": "地址",
       "addressTooltip": "要显示的内存位置,一个地址或对一个地址进行评估的表达式",
       "ascii": "ASCII",
       "binary": "二进制",
@@ -353,8 +280,10 @@
       "hiddenChannels": "隐蔽通道",
       "hideOutputChannel": "隐藏输出通道...",
       "maxChannelHistory": "一个输出通道中的最大条目数。",
-      "outputChannels": "输出通道",
       "showOutputChannel": "显示输出通道..."
+    },
+    "plugin": {
+      "blockNewTab": "您的浏览器阻止了新标签的打开"
     },
     "plugin-dev": {
       "alreadyRunning": "托管的实例已经在运行。",
@@ -385,7 +314,6 @@
     },
     "plugin-ext": {
       "plugins": "插件",
-      "signInAgain": "分机'{0}'希望你用{1}再次登录。",
       "webviewTrace": "控制与webviews的通信跟踪。",
       "webviewWarnIfUnsecure": "警告用户,目前网络视图的部署是不安全的。"
     },
@@ -398,7 +326,6 @@
       "lastModified": "最后修改",
       "location": "位置",
       "noProperties": "没有可用的属性。",
-      "path": "路径",
       "properties": "属性",
       "size": "尺寸",
       "symbolicLink": "符号链接"
@@ -427,9 +354,6 @@
       "extract-widget": "将视图移至第二窗口"
     },
     "shell-area": {
-      "bottom": "底部",
-      "left": "左边",
-      "right": "右边",
       "secondary": "二级窗口",
       "top": "返回顶部"
     },
@@ -439,21 +363,26 @@
       "openUserTasks": "打开用户的任务"
     },
     "terminal": {
-      "confirmClose": "控制如果有活动的终端会话,是否在窗口关闭时进行确认。",
-      "confirmCloseAlways": "始终确认是否有终端。",
-      "confirmCloseChildren": "确认是否有任何终端有子进程。",
-      "confirmCloseNever": "永远不要确认。",
+      "defaultProfile": "上使用的默认配置文件。{0}",
       "enableCopy": "启用ctrl-c(macOS上为cmd-c)来复制选定的文本",
       "enablePaste": "启用ctrl-v(macOS上为cmd-v)从剪贴板粘贴。",
+      "profileArgs": "此配置文件使用的shell参数。",
+      "profileColor": "终端主题颜色ID,与终端相关联。",
+      "profileDefault": "选择默认配置文件...",
+      "profileIcon": "一个与终端图标相关联的codicon ID。\nterminal-tmux:\"$(terminal-tmux)\"",
+      "profileNew": "新终端(含简介)...",
+      "profilePath": "此配置文件使用的shell的路径。",
+      "profileSource": "一个将自动检测到shell的路径的配置文件源。注意,不支持非标准的可执行位置,必须在一个新的配置文件中手动创建。",
+      "profiles": "创建一个新的终端时要呈现的配置文件。用可选的args手动设置路径属性。\n将现有的配置文件设置为`null'以从列表中隐藏该配置文件,例如:`\"{0}\": null`。",
+      "rendererType": "控制终端的渲染方式。",
+      "selectProfile": "为新终端选择一个配置文件",
+      "shell.deprecated": "这已被废弃,新的推荐方法是在'terminal.integrated.profiles.{0}'中创建一个终端配置文件,并在'terminal.integrated.defaultProfile.{0}'中把它的配置文件名称设置为默认值,来配置你的默认外壳。",
       "shellArgsLinux": "在Linux终端时使用的命令行参数。",
       "shellArgsOsx": "在macOS终端时使用的命令行参数。",
       "shellArgsWindows": "在Windows终端时使用的命令行参数。",
       "shellLinux": "终端在Linux上使用的shell的路径(默认:'{0}'})。",
       "shellOsx": "终端在macOS上使用的shell的路径(默认:'{0}'})。",
-      "shellWindows": "终端在Windows上使用的shell的路径。(默认:'{0}')。",
-      "terminate": "结束",
-      "terminateActive": "你想终止正在进行的终端会话吗?",
-      "terminateActiveMultiple": "你想终止{0}活动的终端会话吗?"
+      "shellWindows": "终端在Windows上使用的shell的路径。(默认:'{0}')。"
     },
     "toolbar": {
       "addCommand": "将命令添加到工具栏",
@@ -477,11 +406,9 @@
     },
     "typehierarchy": {
       "subtypeHierarchy": "子类型层次结构",
-      "supertypeHierarchy": "超类型层次结构",
-      "typeHierarchy": "类型层次结构"
+      "supertypeHierarchy": "超类型层次结构"
     },
     "vsx-registry": {
-      "averageRating": "平均评分: {0} (满分5分)",
       "downloadCount": "下载次数: {0}",
       "errorFetching": "取出扩展程序时出错。",
       "failedInstallingVSIX": "从VSIX安装{0} ,失败了。",
@@ -521,7 +448,6 @@
       "trashTitle": "将{0}移至垃圾箱",
       "trustEmptyWindow": "控制空工作区是否被默认信任。",
       "trustEnabled": "控制是否启用工作区信任。如果禁用,所有工作空间都被信任。",
-      "trustPrompt": "控制何时显示信任工作区的启动提示。",
       "trustRequest": "一个扩展请求信任工作区,但相应的API还没有完全支持。你想信任这个工作区吗?",
       "untitled-cleanup": "似乎有许多无标题的工作区文件。请检查{0}并删除任何未使用的文件。",
       "workspaceFolderAdded": "创建了一个有多个根的工作区。你想把你的工作区配置保存为一个文件吗?",
